--- a/guest_list.css
+++ b/guest_list.css
@@ -1,5 +1,5 @@
 #header {
-  font: 400 130px/0.8 'Great Vibes', 'Merienda', sans-serif;
+  font: 400 130px/0.8 'Great Vibes', 'Dancing Script', cursive;
   text-shadow: 4px 4px 3px rgba(0,0,0,0.3); 
   
   margin-top: 4%;
