--- a/guest_list.css
+++ b/guest_list.css
@@ -16,6 +16,15 @@
   font-weight: bold;
 }
 
+img {
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height 100%;
+ 	overflow: None;
+
+	margin-bottom: 2%;
+}
 /* Style the navigation menu */
 .navbar {
   width: 100%;
